--- a/presentacion_proyecto_ml.ipynb
+++ b/presentacion_proyecto_ml.ipynb
@@ -77,6 +77,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fed44f12",
+   "metadata": {},
+   "source": [
+    "## Target\n",
+    "\n",
+    "Disease_Severity\n",
+    "\n",
+    "Disease_Type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "b8af28b2",
@@ -526,6 +538,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "5ecccdf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Disease_Type\n",
+       "Cancer                      622\n",
+       "Skin Disease                622\n",
+       "Neurological Disorder       597\n",
+       "Respiratory Issues          581\n",
+       "Gastrointestinal Disease    578\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Disease_Type\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "68e8a2f9",
    "metadata": {},
@@ -750,6 +789,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89193940",
+   "metadata": {},
+   "source": [
+    "Las variables numéricas tienen un bajísima correlación lineal, pero pueden existir correlaciones no lineales o depender de interacciones con otras variables.\n",
+    "\n",
+    "La severidad puede depender de combinaciones, no de variables individuales. \n",
+    "\n",
+    "Ejemplos:\n",
+    "\n",
+    "Alta concentración de contaminante + baja humedad → mayor severidad.\n",
+    "\n",
+    "Suelo ácido + cierto tipo de cultivo → mayor riesgo de enfermedad grave."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "4d427500",
@@ -812,6 +867,22 @@
     "plt.xlabel(\"Tipo de contaminante\")\n",
     "plt.ylabel(\"País\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2e0989b",
+   "metadata": {},
+   "source": [
+    "## Objetivo\n",
+    "\n",
+    "Analizar la relación entre contaminación del suelo y enfermedades asociadas, utilizando variables ambientales, agrícolas y demográficas, para predecir la severidad de las enfermedades como un problema de clasificación (Mild, Moderate, Severe).\n",
+    "\n",
+    "Dado que las correlaciones lineales entre las variables numéricas y la severidad son muy bajas, se plantea un análisis predictivo basado en modelos de clasificación que puedan capturar relaciones no lineales e interacciones complejas.\n",
+    "\n",
+    "- Las variables numéricas (concentración de contaminantes, pH, temperatura, humedad, lluvia, materia orgánica) sean normalizadas o estandarizadas.\n",
+    "\n",
+    "- Las variables categóricas (tipo de contaminante, suelo, región, edad, género, tipo de enfermedad) sean codificadas mediante técnicas como One-Hot Encoding u Ordinal Encoding según corresponda.\n"
    ]
   }
  ],
