--- a/presentacion_proyecto_ml.ipynb
+++ b/presentacion_proyecto_ml.ipynb
@@ -23,6 +23,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e41cbd4d",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\">\n",
+    "  <img src=\"img/pollution1.png\" width=\"700\" style=\"border-radius: 25px;\">\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfb7b8af",
    "metadata": {},
    "source": [
