--- a/presentacion_proyecto_ml.ipynb
+++ b/presentacion_proyecto_ml.ipynb
@@ -58,32 +58,32 @@
    "id": "452eb756",
    "metadata": {},
    "source": [
-    "| Columna                           | Descripción                                                                       |\n",
-    "| --------------------------------- | --------------------------------------------------------------------------------- |\n",
-    "| **Case_ID**                       | Identificador único del caso reportado.                                           |\n",
-    "| **Date_Reported**                 | Fecha en que se registró el caso.                                                 |\n",
-    "| **Region**                        | Región geográfica del caso (ej. Europa, Asia, África).                            |\n",
-    "| **Country**                       | País donde ocurrió el caso.                                                       |\n",
-    "| **Pollutant_Type**                | Tipo de contaminante detectado (ej. Plomo, Mercurio, Arsénico).                   |\n",
-    "| **Pollutant_Concentration_mg_kg** | Concentración del contaminante en el suelo medida en mg/kg.                       |\n",
-    "| **Soil_pH**                       | Nivel de acidez o alcalinidad del suelo.                                          |\n",
-    "| **Temperature_C**                 | Temperatura ambiental en grados Celsius en el momento del reporte.                |\n",
-    "| **Humidity_%**                    | Humedad ambiental relativa en porcentaje.                                         |\n",
-    "| **Rainfall_mm**                   | Precipitaciones en milímetros durante el período asociado al caso.                |\n",
-    "| **Crop_Type**                     | Tipo de cultivo presente en la zona afectada.                                     |\n",
-    "| **Farming_Practice**              | Método agrícola utilizado (orgánico, intensivo, sostenible, etc.).                |\n",
-    "| **Nearby_Industry**               | Industria cercana que podría influir (si existe).                                 |\n",
-    "| **Water_Source_Type**             | Tipo de fuente de agua utilizada (pozo, río, lluvia, etc.).                       |\n",
-    "| **Soil_Texture**                  | Textura del suelo (arenoso, limoso, arcilloso, etc.).                             |\n",
-    "| **Soil_Organic_Matter_%**         | Porcentaje de materia orgánica presente en el suelo.                              |\n",
-    "| **Disease_Type**                  | Tipo de enfermedad asociada al caso (cáncer, problemas gastrointestinales, etc.). |\n",
-    "| **Disease_Severity**              | Nivel de severidad de la enfermedad (Mild, Moderate, Severe).                     |\n",
-    "| **Health_Symptoms**               | Síntomas principales experimentados por la población.                             |\n",
-    "| **Age_Group_Affected**            | Grupo de edad más afectado (niños, adultos, ancianos).                            |\n",
-    "| **Gender_Most_Affected**          | Género más afectado por el caso.                                                  |\n",
-    "| **Mitigation_Measure**            | Medidas tomadas para mitigar el problema (regulación, remediación, etc.).         |\n",
-    "| **Case_Resolved**                 | Indica si el caso fue resuelto (Yes/No).                                          |\n",
-    "| **Follow_Up_Required**            | Indica si se requiere seguimiento adicional (Yes/No).                             |\n"
+    "| Columna                           | Descripción                                                                                             |\n",
+    "| --------------------------------- | ------------------------------------------------------------------------------------------------------- |\n",
+    "| **Case_ID**                       | Identificador único del caso reportado.                                                                 |\n",
+    "| **Date_Reported**                 | Fecha en que se registró el caso.                                                                       |\n",
+    "| **Region**                        | Región geográfica donde ocurre el caso.                                                                 |\n",
+    "| **Country**                       | País donde ocurre el caso.                                                                              |\n",
+    "| **Pollutant_Type**                | Tipo de contaminante detectado en el suelo.                                                             |\n",
+    "| **Pollutant_Concentration_mg_kg** | Concentración del contaminante en mg/kg. Rango real: **~10–300 mg/kg**. Ejemplos: 78.04, 16.33, 167.33. |\n",
+    "| **Soil_pH**                       | Nivel de acidez/alcalinidad del suelo. Rango real: **5.0–8.5**. Ejemplos: 8.30, 7.96, 5.35.             |\n",
+    "| **Temperature_C**                 | Temperatura ambiental en °C. Rango real: **10–40°C**. Ejemplos: 35.6, 31.0, 16.4.                       |\n",
+    "| **Humidity_%**                    | Humedad relativa del aire en porcentaje. Rango real: **20%–90%**. Ejemplos: 64.9, 73.1, 33.8.           |\n",
+    "| **Rainfall_mm**                   | Precipitación acumulada en mm. Rango real: **0–300 mm**. Ejemplos: 62.4, 8.2, 121.7.                    |\n",
+    "| **Crop_Type**                     | Tipo de cultivo presente en la zona afectada.                                                           |\n",
+    "| **Farming_Practice**              | Método agrícola utilizado (orgánico, intensivo, sostenible…).                                           |\n",
+    "| **Nearby_Industry**               | Industria cercana que puede influir en la contaminación.                                                |\n",
+    "| **Water_Source_Type**             | Tipo de fuente de agua (pozo, río, lluvia…).                                                            |\n",
+    "| **Soil_Texture**                  | Textura del suelo (Sandy, Silty, Clay, Loamy).                                                          |\n",
+    "| **Soil_Organic_Matter_%**         | Porcentaje de materia orgánica del suelo. Rango real: **0.5%–10%**. Ejemplos: 1.98, 9.71, 5.49.         |\n",
+    "| **Disease_Type**                  | Tipo de enfermedad (Cancer, Neurological Disorder, etc.).                                               |\n",
+    "| **Disease_Severity**              | Severidad de la enfermedad (Mild, Moderate, Severe).                                                    |\n",
+    "| **Health_Symptoms**               | Síntomas principales reportados.                                                                        |\n",
+    "| **Age_Group_Affected**            | Grupo de edad afectado (Children, Adults, Elderly).                                                     |\n",
+    "| **Gender_Most_Affected**          | Género más afectado (Male, Female, Both).                                                               |\n",
+    "| **Mitigation_Measure**            | Medida aplicada para mitigar el problema.                                                               |\n",
+    "| **Case_Resolved**                 | Indica si el caso ha sido resuelto (Yes/No).                                                            |\n",
+    "| **Follow_Up_Required**            | Indica si requiere seguimiento adicional (Yes/No).                                                      |\n"
    ]
   },
   {
