repo actualizado, cambio de dataset

--- a/presentacion_proyecto_ml.ipynb
+++ b/presentacion_proyecto_ml.ipynb
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "ba13a2cf",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10, 5))\n",
+    "lt.figure(figsize=(10, 5))\n",
     "sns.heatmap(df.corr(numeric_only=True), annot=True, vmin=-1, cmap=\"coolwarm\")\n",
     "plt.show()"
    ]
