Uso de Git LFS para archivos npy

--- a/notebooks/entrenamiento_modelos_no_supervisados.ipynb
+++ b/notebooks/entrenamiento_modelos_no_supervisados.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,16 +1193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamaño X_train: (3240, 64, 64, 3)\n",
-      "Tamaño X_val: (360, 64, 64, 3)\n",
-      "Tamaño X_test: (400, 64, 64, 3)\n"
+      "Tamaño X_train: (2916, 64, 64, 3)\n",
+      "Tamaño X_val: (324, 64, 64, 3)\n",
+      "Tamaño X_test: (2916, 4)\n",
+      "Tamaño y_val: (324, 4)\n"
      ]
     }
    ],
@@ -1216,7 +1217,20 @@
     "\n",
     "print(\"Tamaño X_train:\", X_train.shape)\n",
     "print(\"Tamaño X_val:\", X_val.shape)\n",
-    "print(\"Tamaño X_test:\", X_test.shape)"
+    "print(\"Tamaño X_test:\", y_train.shape)\n",
+    "print(\"Tamaño y_val:\", y_val.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('../data/exports/X_train.npy', X_train)\n",
+    "np.save('../data/exports/X_val.npy', X_val)\n",
+    "np.save('../data/exports/y_train.npy', y_train)\n",
+    "np.save('../data/exports/y_val.npy', y_val)"
    ]
   },
   {
