--- a/notebooks/entrenamiento_modelos_no_supervisados.ipynb
+++ b/notebooks/entrenamiento_modelos_no_supervisados.ipynb
@@ -164,27 +164,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3600, 64, 64, 3)\n",
-      "(3600, 4)\n",
-      "(400, 64, 64, 3)\n",
-      "(400, 4)\n"
+      "X_train:  (3600, 64, 64, 3)\n",
+      "y_train:  (3600, 4)\n",
+      "X_test:  (400, 64, 64, 3)\n",
+      "y_test:  (400, 4)\n"
      ]
     }
    ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=11)\n",
     "\n",
-    "print(X_train.shape)\n",
-    "print(y_train.shape)\n",
-    "print(X_test.shape)\n",
-    "print(y_test.shape)"
+    "print(\"X_train: \", X_train.shape)\n",
+    "print(\"y_train: \", y_train.shape)\n",
+    "print(\"X_test: \", X_test.shape)\n",
+    "print(\"y_test: \", y_test.shape)"
    ]
   },
   {
