--- a/notebooks/entrenamiento_modelos_supervisados.ipynb
+++ b/notebooks/entrenamiento_modelos_supervisados.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "(4000, 12288)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "Length: 4000, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,27 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3600, 12288)\n",
-      "(3600,)\n",
-      "(400, 12288)\n",
-      "(400,)\n"
+      "X_train:  (3600, 12288)\n",
+      "y_train:  (3600,)\n",
+      "X_test:  (400, 12288)\n",
+      "y_test:  (400,)\n"
      ]
     }
    ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=11)\n",
     "\n",
-    "print(X_train.shape)\n",
-    "print(y_train.shape)\n",
-    "print(X_test.shape)\n",
-    "print(y_test.shape)"
+    "print(\"X_train: \", X_train.shape)\n",
+    "print(\"y_train: \", y_train.shape)\n",
+    "print(\"X_test: \", X_test.shape)\n",
+    "print(\"y_test: \", y_test.shape)"
    ]
   },
   {
@@ -266,6 +266,27 @@
     "\n",
     "print(\"Mejores parámetros:\", grid.best_params_)\n",
     "print(\"Mejor accuracy:\", grid.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12288,)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test\n",
+    "X_test[0].shape"
    ]
   },
   {
